# simeis

./: Cargo.toml  Cargo.toml.patch  Makefile  README.md  advanced-analysis.yml  check_todos.py  create_missing_issues.py  functional_tests.py
.github/: CODEOWNERS
.github/workflows/: advanced-analysis.yml  branch_guard.yml  check-todos.yml  ci.yml  dependabot_diy.yml  heavy_tests.yml  matrix_build.yml  propagation.yml  quality.yml  release.yml
debian-package/DEBIAN/: control  postinst
debian-package/etc/systemd/system/: simeis.service
debian-package/usr/share/man/man1/: simeis.1
example/: watch_game.py
sdk/: python.py
simeis-data/src/: galaxy.rs  game.rs  industry.rs  market.rs  player.rs  ship.rs
simeis-data/src/galaxy/: planet.rs  station.rs
simeis-data/src/ship/: cargo.rs  resources.rs
simeis-server/: Cargo.toml
simeis-server/src/: api.rs  main.rs
simeis-server/src/api/: crew.rs  industry.rs  market.rs  player.rs  ship.rs  station.rs  station_shop.rs  system.rs
tests/: README_FUNCTIONAL_TESTS.md  example_advanced_scenario.py  functional_tests.py  propertybased.py  validate_tests.sh
