[package]
name = "simeis-server"
version = "0.1.3"
edition = "2021"

[dependencies]
simeis-data = { path = "../simeis-data" }
urlencoding = "2.1.3"
ntex = { version = "3.7.0", features = ["compress"], default-features = false }
compio = { version = "*", optional = true }
tokio = { version = "*", features = ["rt-multi-thread"], optional = true }

base64 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
mea = { workspace = true }

[features]
default = ["compio"]
testing = ["simeis-data/testing"]
extraspeed = ["simeis-data/extraspeed"]
heavy-testing = []

# Async runtimes
compio = [ "ntex/compio", "dep:compio" ]
tokio = [ "ntex/tokio", "dep:tokio" ]

[profile.release]
opt-level = 3
strip = "symbols"
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 8
